--- a/index.html
+++ b/index.html
@@ -1,146 +1,306 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AURA CLOTHING</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f8f8f8;
-      color: #333;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happy Birthday Anmu! 🎂</title>
+    <!-- Load Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Custom styles for decoration and effects */
+        @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Inter:wght@400;700;900&display=swap');
 
-    header {
-      background-color: #111;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
+        :root {
+            --primary-pink: #ff69b4;
+            --secondary-gold: #ffd700;
+        }
 
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-      letter-spacing: 2px;
-    }
+        body {
+            font-family: 'Inter', sans-serif;
+            background: linear-gradient(135deg, #fce4ec 0%, #ffebee 100%);
+            overflow-x: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
 
-    .intro {
-      padding: 20px;
-      text-align: center;
-      background-color: #fff;
-    }
+        .title-font {
+            font-family: 'Pacifico', cursive;
+            color: var(--primary-pink);
+            text-shadow: 2px 2px 0 #fff, 4px 4px 0 var(--secondary-gold);
+        }
 
-    .collection {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-      background-color: #fff;
-    }
+        .decorative-card {
+            background-color: #fff;
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.25), 0 0 15px rgba(255, 105, 180, 0.8);
+            border-radius: 20px;
+            border: 5px solid var(--secondary-gold);
+            animation: pulse 4s infinite;
+        }
 
-    .item {
-      background-color: #f1f1f1;
-      border-radius: 8px;
-      overflow: hidden;
-      text-align: center;
-      padding-bottom: 10px;
-    }
+        @keyframes pulse {
+            0% { transform: scale(1); box-shadow: 0 15px 30px rgba(0, 0, 0, 0.25), 0 0 15px rgba(255, 105, 180, 0.8); }
+            50% { transform: scale(1.02); box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3), 0 0 25px rgba(255, 215, 0, 1); }
+            100% { transform: scale(1); box-shadow: 0 15px 30px rgba(0, 0, 0, 0.25), 0 0 15px rgba(255, 105, 180, 0.8); }
+        }
 
-    .item img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-    }
+        /* --- Candle Animation --- */
+        .candle {
+            position: relative;
+            width: 30px;
+            height: 100px;
+            background: linear-gradient(to top, #fff 0%, #ccc 100%);
+            border-radius: 5px;
+            margin: 0 15px;
+            box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+        }
 
-    .item h3 {
-      margin: 10px 0 5px;
-    }
+        .wick {
+            position: absolute;
+            top: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 2px;
+            height: 15px;
+            background: #222;
+        }
 
-    .item p {
-      font-weight: bold;
-      color: #444;
-    }
+        .flame {
+            position: absolute;
+            top: -30px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 10px;
+            height: 20px;
+            background-color: orange;
+            border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+            box-shadow: 0 0 5px yellow, 0 0 10px orange, 0 0 15px red;
+            animation: flicker 0.1s infinite alternate;
+        }
 
-    .buy-section {
-      padding: 30px;
-      text-align: center;
-      background-color: #eee;
-    }
+        @keyframes flicker {
+            0% { transform: translateX(-50%) scale(1.0); opacity: 1; }
+            50% { transform: translateX(-50%) scale(0.95); opacity: 0.95; }
+            100% { transform: translateX(-50%) scale(1.05); opacity: 1; }
+        }
 
-    .buy-section a {
-      display: inline-block;
-      background-color: #111;
-      color: white;
-      padding: 12px 25px;
-      text-decoration: none;
-      font-size: 16px;
-      border-radius: 5px;
-      margin-top: 10px;
-    }
+        /* --- Confetti/Firework Particles --- */
+        .confetti {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: var(--primary-pink);
+            opacity: 0;
+            pointer-events: none;
+            border-radius: 50%;
+            transition: all 0.5s;
+        }
 
-    footer {
-      text-align: center;
-      background-color: #111;
-      color: white;
-      padding: 15px;
-      font-size: 0.9em;
-    }
-
-    @media (max-width: 600px) {
-      .item img {
-        height: 200px;
-      }
-    }
-  </style>
+        .fireworks-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 50;
+        }
+    </style>
 </head>
-<body>
+<body class="p-4 md:p-8">
+    <!-- Confetti & Fireworks Container (for Page 3) -->
+    <div id="fireworks-container" class="fireworks-container"></div>
 
-  <header>
-    <h1>AURA CLOTHING</h1>
-  </header>
-
-  <section class="intro">
-    <p>Welcome to <strong>AURA CLOTHING</strong> — where fashion meets confidence and creativity.<br>
-    Explore our curated collection of modern styles below.</p>
-  </section>
-
-  <section class="collection">
-
-    <!-- Item Template -->
-    <div class="item">
-      <img src="insert-image-url-here" alt="Classic Streetwear Hoodie">
-      <h3>Classic Streetwear Hoodie</h3>
-      <p>$49.99</p>
+    <div id="app-container" class="w-full max-w-lg mx-auto text-center decorative-card p-6 md:p-10 transition-all duration-500 min-h-[400px]">
+        <!-- Content will be rendered here by JavaScript -->
     </div>
 
-    <div class="item">
-      <img src="insert-image-url-here" alt="Slim Fit Denim Jacket">
-      <h3>Slim Fit Denim Jacket</h3>
-      <p>$69.99</p>
-    </div>
+    <script>
+        // --- Global Variables ---
+        let currentPage = 1;
+        const totalPages = 3;
+        const appContainer = document.getElementById('app-container');
+        const fireworksContainer = document.getElementById('fireworks-container');
 
-    <div class="item">
-      <img src="insert-image-url-here" alt="Oversized Graphic Tee">
-      <h3>Oversized Graphic Tee</h3>
-      <p>$29.99</p>
-    </div>
+        const friendName = "Anam Irfan";
+        const nickname = "Anmu";
+        const birthdayDate = new Date('October 20, 2025 00:00:00'); // Assuming a general future date for the demo
 
-    <!-- Add more items here if needed -->
+        // --- Utility Functions ---
 
-  </section>
+        // Function to create and launch a single confetti particle
+        function createConfetti(x, y, color, size = '10px', shape = 'circle') {
+            const particle = document.createElement('div');
+            particle.className = `confetti`;
+            if (shape === 'square') {
+                particle.style.borderRadius = '0';
+            }
+            particle.style.width = size;
+            particle.style.height = size;
+            particle.style.backgroundColor = color;
+            particle.style.left = `${x}px`;
+            particle.style.top = `${y}px`;
+            particle.style.opacity = 1;
 
-  <section class="buy-section">
-    <h2>How to Buy</h2>
-    <p>Visit our store and check out your favorite styles easily.</p>
-    <a href="insert-your-store-url-here" target="_blank">Go to Online Store</a>
-    <p style="margin-top: 10px;">For help, email us at: <a href="mailto:support@auraclothing.com">support@auraclothing.com</a></p>
-  </section>
+            const angle = Math.random() * Math.PI * 2;
+            const velocity = Math.random() * 25 + 5;
+            const lifetime = Math.random() * 2000 + 1000;
 
-  <footer>
-    <p>&copy; 2025 AURA CLOTHING. Stay stylish. Stay bold.</p>
-  </footer>
+            const dx = Math.cos(angle) * velocity;
+            const dy = Math.sin(angle) * velocity - 10; // Initial upward bias
 
+            appContainer.appendChild(particle);
+
+            let startTime = performance.now();
+
+            function animateConfetti(currentTime) {
+                const elapsedTime = currentTime - startTime;
+                if (elapsedTime > lifetime) {
+                    particle.remove();
+                    return;
+                }
+
+                const timeRatio = elapsedTime / 1000;
+                const newX = x + dx * timeRatio;
+                // Add gravity: 0.5 * g * t^2. g is acceleration due to gravity (simplified).
+                const newY = y + dy * timeRatio + 0.5 * 9.8 * timeRatio * timeRatio * 50;
+
+                particle.style.transform = `translate(${newX - x}px, ${newY - y}px) rotate(${elapsedTime / 10}deg)`;
+                particle.style.opacity = 1 - (elapsedTime / lifetime);
+
+                requestAnimationFrame(animateConfetti);
+            }
+            requestAnimationFrame(animateConfetti);
+        }
+
+        // Function to simulate a "pop" of confetti from a point
+        function launchConfettiBurst(count = 30, centerX, centerY) {
+            const colors = ['#ff69b4', '#ffd700', '#8a2be2', '#ff4500', '#00ced1'];
+            const shapes = ['circle', 'square'];
+
+            for (let i = 0; i < count; i++) {
+                const color = colors[Math.floor(Math.random() * colors.length)];
+                const shape = shapes[Math.floor(Math.random() * shapes.length)];
+                const size = `${Math.random() * 8 + 4}px`; // 4px to 12px
+                createConfetti(centerX, centerY, color, size, shape);
+            }
+        }
+
+        // --- Navigation Logic ---
+
+        function nextPage() {
+            if (currentPage < totalPages) {
+                currentPage++;
+            } else {
+                // Wrap back to the start or show a final message
+                currentPage = 1;
+            }
+            renderPage();
+        }
+
+        function renderPage() {
+            // Clear the existing content
+            appContainer.innerHTML = '';
+            // Hide fireworks on non-firework pages
+            fireworksContainer.classList.add('hidden');
+
+            const content = document.createElement('div');
+            content.className = 'flex flex-col items-center space-y-8';
+
+            let nextButtonText = 'Continue >>';
+
+            if (currentPage === 1) {
+                // --- Page 1: Landing/Intro ---
+                content.innerHTML = `
+                    <h1 class="text-4xl md:text-6xl title-font mb-4">You're Invited!</h1>
+                    <p class="text-xl md:text-2xl font-bold text-gray-700">Get Ready for the Birthday Celebration of</p>
+                    <h2 class="text-6xl md:text-8xl font-black text-pink-600 animate-bounce title-font">${nickname}!</h2>
+                    <p class="text-lg md:text-xl font-medium text-gray-500">The day is October 20th</p>
+                    <div class="flex space-x-4">
+                        <div class="candle"><div class="wick"></div><div class="flame"></div></div>
+                        <div class="candle"><div class="wick"></div><div class="flame"></div></div>
+                        <div class="candle"><div class="wick"></div><div class="flame"></div></div>
+                    </div>
+                `;
+            } else if (currentPage === 2) {
+                // --- Page 2: The Main Wish ---
+                content.innerHTML = `
+                    <h1 class="text-5xl md:text-7xl title-font mb-4 text-center">Happy Birthday ${nickname}!</h1>
+                    <p class="text-2xl md:text-3xl font-semibold text-purple-700 leading-relaxed text-center">
+                        To my dearest ${friendName} (the one and only ${nickname}),
+                    </p>
+                    <p class="text-lg text-gray-600 leading-relaxed text-center">
+                        You light up every room you walk into, and I hope your special day is just as bright and wonderful as you are. May your year be filled with success, joy, and the most incredible adventures. You deserve all the happiness in the world.
+                    </p>
+                    <p class="text-xl font-bold text-pink-600 mt-4">Lots of love, always!</p>
+                    <div class="text-4xl animate-spin-slow">🎉🎂🎁</div>
+                    <div class="flex space-x-2">
+                        <div class="candle"><div class="wick"></div><div class="flame"></div></div>
+                        <div class="candle"><div class="wick"></div><div class="flame"></div></div>
+                        <div class="candle"><div class="wick"></div><div class="flame"></div></div>
+                        <div class="candle"><div class="wick"></div><div class="flame"></div></div>
+                    </div>
+                `;
+            } else if (currentPage === 3) {
+                // --- Page 3: Finale (Fireworks & Pop) ---
+                fireworksContainer.classList.remove('hidden');
+                content.innerHTML = `
+                    <h1 class="text-5xl md:text-7xl title-font mb-4 text-center text-pink-700">It's Party Time!</h1>
+                    <p class="text-2xl font-semibold text-gray-700 mb-4">Click below for a final surprise!</p>
+                    <button id="pop-button" class="bg-gradient-to-r from-red-500 to-yellow-500 text-white font-bold py-4 px-8 rounded-full shadow-lg hover:shadow-xl transform hover:scale-105 transition duration-300 text-2xl animate-pulse">
+                        POP THE CRACKER!
+                    </button>
+                    <p class="text-xl font-bold text-purple-700 mt-8">Happy 20th October!</p>
+                `;
+                nextButtonText = 'Start Over';
+
+                // Attach pop effect handler
+                setTimeout(() => {
+                    document.getElementById('pop-button').addEventListener('click', () => {
+                        // Launch a huge confetti/fireworks burst from the center of the button
+                        const buttonRect = document.getElementById('pop-button').getBoundingClientRect();
+                        const centerX = buttonRect.left + buttonRect.width / 2;
+                        const centerY = buttonRect.top + buttonRect.height / 2;
+
+                        // Create the 'cracker' effect
+                        for (let i = 0; i < 5; i++) {
+                            setTimeout(() => {
+                                launchConfettiBurst(50, centerX, centerY);
+                            }, i * 100);
+                        }
+                    });
+                }, 0); // Ensure button exists before attaching listener
+            }
+
+            // Append page content
+            appContainer.appendChild(content);
+
+            // Create and append navigation button
+            const navButton = document.createElement('button');
+            navButton.onclick = nextPage;
+            navButton.className = 'absolute bottom-4 right-4 bg-purple-500 hover:bg-purple-600 text-white font-bold py-3 px-6 rounded-full shadow-lg transition duration-300 text-lg';
+            navButton.textContent = nextButtonText;
+            appContainer.appendChild(navButton);
+        }
+
+
+        // --- Initialization ---
+        window.onload = function() {
+            // Small setup to handle auth tokens for real-time apps, though not strictly needed here
+            if (typeof __app_id !== 'undefined') { console.log('Firebase environment detected.'); }
+
+            // Initial render
+            renderPage();
+        };
+
+        // Make a periodic confetti background effect on all pages
+        setInterval(() => {
+            if (currentPage !== 3) {
+                launchConfettiBurst(5, Math.random() * appContainer.offsetWidth, appContainer.offsetHeight);
+            }
+        }, 3000);
+
+    </script>
 </body>
 </html>
